fix: cambiamos controladores para que coincidan con api gateway